--- a/ClientApp/src/app/vol-group-life/vol-group-life.component.html
+++ b/ClientApp/src/app/vol-group-life/vol-group-life.component.html
@@ -3,15 +3,8 @@
   <form [formGroup]="volGrpLfformgrp">
     <div class="row" style="justify-content:space-evenly;margin-right: 7%;">
       <div class="radio-button">
-        <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" value="Always Override"
-            formControlName="FCVolGrpLfEffectiveDate_Action" />
-          <label class="radio-label"> Always Override</label></div>
-        <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" [checked]="true"
-            value="Update if Blank" formControlName="FCVolGrpLfEffectiveDate_Action" />
-          <label class="radio-label">Update if Blank</label></div>
-        <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" value="Validate"
-            formControlName="FCVolGrpLfEffectiveDate_Action" />
-          <label class="radio-label">Validate</label></div>
+        <div *ngFor="let item of radioButtonArr"><input type="radio" value={{item.value}} formControlName="FCVolGrpLfEffectiveDate_Action" />
+          <label class="radio-label"> {{item.name}}</label></div>
       </div>
       <div class="col-3">
         <span class="label label-default">Vol Grp life Effective Date</span>
@@ -20,15 +13,8 @@
 
       </div>
       <div class="radio-button">
-        <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" value="Always Override"
-            formControlName="FCVolGrpLfSitusState_Action" />
-          <label class="radio-label"> Always Override</label></div>
-        <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" [checked]="true"
-            value="Update if Blank" formControlName="FCVolGrpLfSitusState_Action" />
-          <label class="radio-label">Update if Blank</label></div>
-        <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" value="Validate"
-            formControlName="FCVolGrpLfSitusState_Action" />
-          <label class="radio-label">Validate</label></div>
+        <div *ngFor="let item of radioButtonArr"><input type="radio" value={{item.value}} formControlName="FCVolGrpLfSitusState_Action" />
+          <label class="radio-label"> {{item.name}}</label></div>
       </div>
       <div class="col-3">
         <span class="label label-default">Situs State</span>
@@ -47,15 +33,8 @@
     <div class="row" style="margin-top: 10px;justify-content:space-evenly;margin-right: 7%;">
 
       <div class="radio-button">
-        <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" value="Always Override"
-            formControlName="FCVolGrpLfEmpAmtMax_Action" />
-          <label class="radio-label"> Always Override</label></div>
-        <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" [checked]="true"
-            value="Update if Blank" formControlName="FCVolGrpLfEmpAmtMax_Action" />
-          <label class="radio-label">Update if Blank</label></div>
-        <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" value="Validate"
-            formControlName="FCVolGrpLfEmpAmtMax_Action" />
-          <label class="radio-label">Validate</label></div>
+        <div *ngFor="let item of radioButtonArr"><input type="radio" value={{item.value}} formControlName="FCVolGrpLfEmpAmtMax_Action" />
+          <label class="radio-label"> {{item.name}}</label></div>
       </div>
       <div class="col-3">
 
@@ -81,15 +60,8 @@
 
     <div class="row mt-2" style="padding-left: 2%;">
       <div class="radio-button">
-        <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" value="Always Override"
-            formControlName="FCVolGrpLfSpouseAmtMax_Action" />
-          <label class="radio-label"> Always Override</label></div>
-        <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" [checked]="true"
-            value="Update if Blank" formControlName="FCVolGrpLfSpouseAmtMax_Action" />
-          <label class="radio-label">Update if Blank</label></div>
-        <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" value="Validate"
-            formControlName="FCVolGrpLfSpouseAmtMax_Action" />
-          <label class="radio-label">Validate</label></div>
+        <div *ngFor="let item of radioButtonArr"><input type="radio" value={{item.value}} formControlName="FCVolGrpLfSpouseAmtMax_Action" />
+          <label class="radio-label"> {{item.name}}</label></div>
       </div>
       <div class="col-3">
         <span class="label label-default">Spouse GI Amount Max</span>
@@ -107,15 +79,8 @@
 
     <div class="row mt-2" style="justify-content:space-evenly;">
       <div class="radio-button">
-        <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" value="Always Override"
-            formControlName="FCVolGrpLfOpenEnrollGI_Action" />
-          <label class="radio-label"> Always Override</label></div>
-        <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" [checked]="true"
-            value="Update if Blank" formControlName="FCVolGrpLfOpenEnrollGI_Action" />
-          <label class="radio-label">Update if Blank</label></div>
-        <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" value="Validate"
-            formControlName="FCVolGrpLfOpenEnrollGI_Action" />
-          <label class="radio-label">Validate</label></div>
+        <div *ngFor="let item of radioButtonArr"><input type="radio" value={{item.value}} formControlName="FCVolGrpLfOpenEnrollGI_Action" />
+          <label class="radio-label"> {{item.name}}</label></div>
       </div>
       <div class="col-4">
 
@@ -124,15 +89,8 @@
       </div>
 
       <div class="radio-button">
-        <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" value="Always Override"
-            formControlName="FCVolGrpLfPlanCodeManualEntry_Action" />
-          <label class="radio-label"> Always Override</label></div>
-        <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" [checked]="true"
-            value="Update if Blank" formControlName="FCVolGrpLfPlanCodeManualEntry_Action" />
-          <label class="radio-label">Update if Blank</label></div>
-        <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" value="Validate"
-            formControlName="FCVolGrpLfPlanCodeManualEntry_Action" />
-          <label class="radio-label">Validate</label></div>
+        <div *ngFor="let item of radioButtonArr"><input type="radio" value={{item.value}} formControlName="FCVolGrpLfPlanCodeManualEntry_Action" />
+          <label class="radio-label"> {{item.name}}</label></div>
       </div>
       <div class="col-4">
         <span class="label label-default">Plan code manual Entry</span>
@@ -143,32 +101,20 @@
 
     <div class="row mt-2" style="justify-content:space-evenly;">
       <div class="radio-button">
-        <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" value="Always Override"
-            formControlName="FCVolGrpLfUserToken_Action" />
-          <label class="radio-label"> Always Override</label></div>
-        <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" [checked]="true"
-            value="Update if Blank" formControlName="FCVolGrpLfUserToken_Action" />
-          <label class="radio-label">Update if Blank</label></div>
-        <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" value="Validate"
-            formControlName="FCVolGrpLfUserToken_Action" />
-          <label class="radio-label">Validate</label></div>
+        <div *ngFor="let item of radioButtonArr"><input type="radio" value={{item.value}} formControlName="FCVolGrpLfUserToken_Action" />
+          <label class="radio-label"> {{item.name}}</label></div>
       </div>
+      
       <div class="col-4">
 
         <span class="label label-default">User Token</span>
         <input type="text" class="form-control mb-2 "  formControlName="FCVolGrpLfUserToken" style="width: 100%;" placeholder="User Token">
       </div>
 
+      
       <div class="radio-button">
-        <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" value="Always Override"
-            formControlName="FCVolGrpLfCaseToken_Action" />
-          <label class="radio-label"> Always Override</label></div>
-        <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" [checked]="true"
-            value="Update if Blank" formControlName="FCVolGrpLfCaseToken_Action" />
-          <label class="radio-label">Update if Blank</label></div>
-        <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" value="Validate"
-            formControlName="FCVolGrpLfCaseToken_Action" />
-          <label class="radio-label">Validate</label></div>
+        <div *ngFor="let item of radioButtonArr"><input type="radio" value={{item.value}} formControlName="FCVolGrpLfCaseToken_Action" />
+          <label class="radio-label"> {{item.name}}</label></div>
       </div>
       <div class="col-4">
         <span class="label label-default">Case Token</span>
