--- a/ClientApp/src/app/fpp-individual/fpp-individual.component.html
+++ b/ClientApp/src/app/fpp-individual/fpp-individual.component.html
@@ -116,17 +116,17 @@
         </div>
         <div class="col-3">
           <span class="label label-default"> Employee Plan code</span>
-          <input type="text" formControlName="FCfppgempPlanCode" class="form-control mb-2 " style="width: 100%;" placeholder="Plan code manual Entry">
+          <input type="text" formControlName="FCfppiempPlanCode" class="form-control mb-2 " style="width: 100%;" placeholder="Plan code manual Entry">
         </div>
       
         <div class="col-3">
           <span class="label label-default"> Spouse Plan code </span>
-          <input type="text" formControlName="FCfppgSpousePlanCode" class="form-control mb-2 " style="width: 100%;" placeholder="Plan code manual Entry">
+          <input type="text" formControlName="FCfppiSpousePlanCode" class="form-control mb-2 " style="width: 100%;" placeholder="Plan code manual Entry">
         </div>
       
         <div class="col-3">
           <span class="label label-default"> Child Plan code</span>
-          <input type="text" formControlName="FCfppgChildPlanCode" class="form-control mb-2 " style="width: 100%;" placeholder="Plan code manual Entry">
+          <input type="text" formControlName="FCfppiChildPlanCode" class="form-control mb-2 " style="width: 100%;" placeholder="Plan code manual Entry">
         </div>
       </div>
 
