--- a/ClientApp/src/app/group-setup/group-setup.component.html
+++ b/ClientApp/src/app/group-setup/group-setup.component.html
@@ -226,7 +226,7 @@
           </a>
           <mat-slide-toggle style="float: right;" [(ngModel)]="isCheckedFppg" (change)="toggleChangeProductFppg($event)"
             [color]="toggleActiveColor">
-            {{checkedToggleProduct}}</mat-slide-toggle>
+            {{checkedToggleProductFppg}}</mat-slide-toggle>
         </div>
         <div id="collapseOne" class="card-body collapse" data-parent="#accordion">
 
@@ -320,7 +320,7 @@
           </a>
           <mat-slide-toggle style="float: right;" [(ngModel)]="isCheckedFppInd"
             (change)="toggleChangeProductFppIndivisual($event)" [color]="toggleActiveColor">
-            {{checkedToggleProduct}}</mat-slide-toggle>
+            {{checkedToggleProductFppi}}</mat-slide-toggle>
         </div>
         <div id="collapseTwo" class="card-body collapse" data-parent="#accordion">
 
@@ -412,7 +412,7 @@
           </a>
           <mat-slide-toggle style="float: right;" [(ngModel)]="isCheckedAccident"
             (change)="toggleChangeProductAccident($event)" [color]="toggleActiveColor">
-            {{checkedToggleProduct}}</mat-slide-toggle>
+            {{checkedToggleProductACCident}}</mat-slide-toggle>
         </div>
         <div id="collapseThree" class="collapse" data-parent="#accordion">
           <div class="card-body">
@@ -506,7 +506,7 @@
           </a>
           <mat-slide-toggle style="float: right;" [(ngModel)]="isCheckedHospital"
             (change)="toggleChangeProductHospitalIndemnity($event)" [color]="toggleActiveColor">
-            {{checkedToggleProduct}}</mat-slide-toggle>
+            {{checkedToggleProductHospitalIndemnity}}</mat-slide-toggle>
         </div>
         <div id="collapseFour" class="collapse" data-parent="#accordion">
           <div class="card-body">
@@ -603,7 +603,7 @@
           </a>
           <mat-slide-toggle style="float: right;" [(ngModel)]="isCheckedEmpPaidCi"
             (change)="toggleChangeProductEmpPaidCi($event)" [color]="toggleActiveColor">
-            {{checkedToggleProduct}}</mat-slide-toggle>
+            {{checkedToggleProductEmpPaidCI}}</mat-slide-toggle>
         </div>
         <div id="collapseFive" class="collapse" data-parent="#accordion">
           <div class="card-body">
@@ -696,7 +696,7 @@
           </a>
           <mat-slide-toggle style="float: right;" [(ngModel)]="isCheckedVolutaryCi"
             (change)="toggleChangeProductVolCI($event)" [color]="toggleActiveColor">
-            {{checkedToggleProduct}}</mat-slide-toggle>
+            {{checkedToggleProductVolCI}}</mat-slide-toggle>
         </div>
         <div id="collapseSix" class="collapse" data-parent="#accordion">
           <div class="card-body">
@@ -789,7 +789,7 @@
           </a>
           <mat-slide-toggle style="float: right;" [(ngModel)]="isCheckedVolGrpLife"
             (change)="toggleChangeProductVilGrpLife($event)" [color]="toggleActiveColor">
-            {{checkedToggleProduct}}</mat-slide-toggle>
+            {{checkedToggleProductVolGrpCI}}</mat-slide-toggle>
         </div>
         <div id="collapseSeven" class="collapse" data-parent="#accordion">
           <div class="card-body">
@@ -882,7 +882,7 @@
           </a>
           <mat-slide-toggle style="float: right;" [(ngModel)]="isCheckedBasicGrpLife"
             (change)="toggleChangeProductBasicGrpLife($event)" [color]="toggleActiveColor">
-            {{checkedToggleProduct}}</mat-slide-toggle>
+            {{checkedToggleProductBcsGrpLife}}</mat-slide-toggle>
         </div>
         <div id="collapseEight" class="collapse" data-parent="#accordion">
           <div class="card-body">
