--- a/ClientApp/src/app/fppg/fppg.component.html
+++ b/ClientApp/src/app/fppg/fppg.component.html
@@ -141,7 +141,7 @@
           </div>
           <div class="col" style="justify-content:flex-start;margin-right: 170px;
            margin-top: 24px;">
-            <mat-checkbox class="example-margin" formControlName="FCfppgQolRiders" [(ngModel)]="checked" name="Qol">QOL
+            <mat-checkbox class="example-margin" formControlName="FCfppgQolRiders" (change) = "onQolChecked($event)" name="Qol">QOL
               Rider</mat-checkbox>
           </div>
         </div>
@@ -155,7 +155,7 @@
           <div class="col">
           </div>
           <div class="col" style="margin-top: 24px;">
-            <mat-checkbox class="margin" formControlName="FCfppgWaiver" [(ngModel)]="indeterminate" name="Waiver">Waiver
+            <mat-checkbox class="margin" formControlName="FCfppgWaiver" (change)="onWaiverChecked($event)" name="Waiver">Waiver
             </mat-checkbox>
           </div>
         </div>
