--- a/ClientApp/src/app/fpp-individual/fpp-individual.component.html
+++ b/ClientApp/src/app/fpp-individual/fpp-individual.component.html
@@ -168,7 +168,7 @@
         </div>
 
       </div>
-      <div class="row mt-2" style="margin-left: 0%;"> 
+      <!-- <div class="row mt-2" style="margin-left: 0%;"> 
         <div class="radio-button">
           <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" value="Always Override"
               formControlName="FCfppiOpenEnrollGI_Action" />
@@ -186,23 +186,9 @@
           <input type="text" class="form-control mb-2 " formControlName="FCfppiOpenEnrollGI" style="width: 100%;" placeholder="Open Enrollment GI">
         </div>
 
-        <!-- <div class="radio-button">
-          <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" value="Always Override"
-              formControlName="FCfppiPlanCodeManualEntry_Action" />
-            <label class="radio-label"> Always Override</label></div>
-          <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" [checked]="true"
-              value="Update if Blank" formControlName="FCfppiPlanCodeManualEntry_Action" />
-            <label class="radio-label">Update if Blank</label></div>
-          <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" value="Validate"
-              formControlName="FCfppiPlanCodeManualEntry_Action" />
-            <label class="radio-label">Validate</label></div>
-        </div>
-        <div class="col-4">
-          <span class="label label-default">Plan code manual Entry</span>
-          <input type="text" class="form-control mb-2 " formControlName="FCfppiPlanCodeManualEntry" style="width: 100%;" placeholder="Plan code manual Entry">
-        </div> -->
+       
 
-      </div>
+      </div> -->
       <div class="row pt-2 pl-4">
         <h6>
           Riders
