--- a/ClientApp/src/app/vol-group-life/vol-group-life.component.html
+++ b/ClientApp/src/app/vol-group-life/vol-group-life.component.html
@@ -77,8 +77,8 @@
 
     </div>
 
-    <div class="row mt-2" style="justify-content:space-evenly;">
-      <div class="radio-button">
+    <div class="row mt-2" style="margin-left: 1%;">
+      <!-- <div class="radio-button">
         <div *ngFor="let item of radioButtonArr"><input type="radio" value={{item.value}} formControlName="FCVolGrpLfOpenEnrollGI_Action" />
           <label class="radio-label"> {{item.name}}</label></div>
       </div>
@@ -86,7 +86,7 @@
 
         <span class="label label-default">Open Enrollment GI</span>
         <input type="text" formControlName="FCVolGrpLfOpenEnrollGI" class="form-control mb-2 " style="width: 100%;" placeholder="Open Enrollment GI">
-      </div>
+      </div> -->
 
       <div class="radio-button">
         <div *ngFor="let item of radioButtonArr"><input type="radio" value={{item.value}} formControlName="FCVolGrpLfPlanCodeManualEntry_Action" />
