--- a/ClientApp/src/app/fppg/fppg.component.html
+++ b/ClientApp/src/app/fppg/fppg.component.html
@@ -111,7 +111,7 @@
       </div>
     </div>
 
-    <div class="row mt-4" style="margin-left: 1%;">
+    <!-- <div class="row mt-4" style="margin-left: 1%;">
       <div class="radio-button">
         <div *ngFor="let item of radioButtonArr"><input type="radio" value={{item.value}} formControlName="FCfppgOpenEnrollGI_Action" />
           <label class="radio-label"> {{item.name}}</label></div>
@@ -123,7 +123,7 @@
           placeholder="Open Enrollment GI">
       </div>
 
-    </div>
+    </div> -->
 
     <div class="row pt-2 pl-4">
       <h6>
