--- a/ClientApp/src/app/basic-group-life/basic-group-life.component.html
+++ b/ClientApp/src/app/basic-group-life/basic-group-life.component.html
@@ -52,13 +52,21 @@
         <div><input type="radio" value="10003" formControlName="FCbasicADDRider_Action" />
           <label class="radio-label">Validate</label></div>
       </div> -->
-      <!-- <div class="col-4 mb-2">
-        <span class="label">AD&D Rider </span>
-        <select class="form-control" formControlName="FCbasicADDRider">
+      <div class="col-4 mb-2">
+        <span class="label">Spouse Face Amount </span>
+        <select class="form-control" formControlName="SpouseFaceAmount">
           <option selected value="Y">Y</option>
           <option value="N">N</option>
         </select>
-      </div> -->
+      </div>
+      <div class="col-4 mb-2">
+        <span class="label">Child Face Amount </span>
+        <select class="form-control" formControlName="ChildFaceAmount">
+          <option selected value="Y">Y</option>
+          <option value="N">N</option>
+        </select>
+      </div>
+
     </div>
     <div class="mt-4">
       <ng-content></ng-content>
