--- a/ClientApp/src/app/basic-group-life/basic-group-life.component.html
+++ b/ClientApp/src/app/basic-group-life/basic-group-life.component.html
@@ -51,20 +51,16 @@
           <label class="radio-label">Update if Blank</label></div>
         <div><input type="radio" value="10003" formControlName="FCbasicADDRider_Action" />
           <label class="radio-label">Validate</label></div>
-      </div> -->
-      <div class="col-4 mb-2">
-        <span class="label">Spouse Face Amount </span>
-        <select class="form-control" formControlName="SpouseFaceAmount">
-          <option selected value="Y">Y</option>
-          <option value="N">N</option>
-        </select>
+      </div> -->SpouseFaceAmount    ChildFaceAmount
+      <div class="col-4">
+        <span class="label label-default">Spouse Face Amount</span>
+        <input type="text" class="form-control mb-2 " formControlName="SpouseFaceAmount" style="width: 100%;"
+          placeholder="Employee Face Amount">
       </div>
-      <div class="col-4 mb-2">
-        <span class="label">Child Face Amount </span>
-        <select class="form-control" formControlName="ChildFaceAmount">
-          <option selected value="Y">Y</option>
-          <option value="N">N</option>
-        </select>
+      <div class="col-4">
+        <span class="label label-default">Child Face Amount</span>
+        <input type="text" class="form-control mb-2 " formControlName="ChildFaceAmount" style="width: 100%;"
+          placeholder="Employee Face Amount">
       </div>
 
     </div>
