--- a/ClientApp/src/app/basic-group-life/basic-group-life.component.html
+++ b/ClientApp/src/app/basic-group-life/basic-group-life.component.html
@@ -38,7 +38,7 @@
         <div *ngFor="let item of radioButtonArr"><input type="radio" value={{item.value}} formControlName="FCbasicEmpFcAmt_Action" />
           <label class="radio-label"> {{item.name}}</label></div>
       </div>
-      <div class="col-4">
+      <div class="col-3">
         <span class="label label-default">Employee Face Amount</span>
         <input type="text" class="form-control mb-2 " formControlName="FCbasicEmpFcAmt" style="width: 100%;"
           placeholder="Employee Face Amount">
@@ -51,13 +51,13 @@
           <label class="radio-label">Update if Blank</label></div>
         <div><input type="radio" value="10003" formControlName="FCbasicADDRider_Action" />
           <label class="radio-label">Validate</label></div>
-      </div> -->SpouseFaceAmount    ChildFaceAmount
-      <div class="col-4">
+      </div> -->
+      <div class="col-3">
         <span class="label label-default">Spouse Face Amount</span>
         <input type="text" class="form-control mb-2 " formControlName="SpouseFaceAmount" style="width: 100%;"
           placeholder="Employee Face Amount">
       </div>
-      <div class="col-4">
+      <div class="col-3">
         <span class="label label-default">Child Face Amount</span>
         <input type="text" class="form-control mb-2 " formControlName="ChildFaceAmount" style="width: 100%;"
           placeholder="Employee Face Amount">
