--- a/ClientApp/src/app/basic-group-life/basic-group-life.component.html
+++ b/ClientApp/src/app/basic-group-life/basic-group-life.component.html
@@ -55,12 +55,12 @@
       <div class="col-3">
         <span class="label label-default">Spouse Face Amount</span>
         <input type="text" class="form-control mb-2 " formControlName="SpouseFaceAmount" style="width: 100%;"
-          placeholder="Employee Face Amount">
+          placeholder="Spouse Face Amount">
       </div>
       <div class="col-3">
         <span class="label label-default">Child Face Amount</span>
         <input type="text" class="form-control mb-2 " formControlName="ChildFaceAmount" style="width: 100%;"
-          placeholder="Employee Face Amount">
+          placeholder="Child Face Amount">
       </div>
 
     </div>
