--- a/ClientApp/src/app/basic-group-life/basic-group-life.component.html
+++ b/ClientApp/src/app/basic-group-life/basic-group-life.component.html
@@ -28,7 +28,7 @@
 
       </div>
       <div class="mt-4">
-        <button class="btn btn-primary" type="submit">Reset Form </button>
+        <button class="btn btn-primary" type="submit" (click)= "resetfpp()">Reset Form </button>
       </div>
     </div>
 
