--- a/ClientApp/src/app/voluntary-ci/voluntary-ci.component.html
+++ b/ClientApp/src/app/voluntary-ci/voluntary-ci.component.html
@@ -90,21 +90,21 @@
           <label class="radio-label"> {{item.name}}</label></div>
       </div>
       <div class="col-3">
-        <span class="label label-default">Plan code manual Entry</span>
-        <input type="text" class="form-control mb-2 " formControlName="FCVolCIPlanCodeManualEntry" style="width: 100%;"
-          placeholder="Plan code manual Entry">
+        <span class="label label-default">Employee Plan code</span>
+        <input type="text" class="form-control mb-2 " formControlName="FCVolCIEmpPlanCode" style="width: 100%;"
+          placeholder="Employee Plan code">
       </div>
 
       <div class="col-3">
-        <span class="label label-default">Plan code manual Entry</span>
-        <input type="text" class="form-control mb-2 " formControlName="FCVolCIPlanCodeManualEntry" style="width: 100%;"
-          placeholder="Plan code manual Entry">
+        <span class="label label-default">Spouse Plan Code</span>
+        <input type="text" class="form-control mb-2 " formControlName="FCVolCISpousePlanCode" style="width: 100%;"
+          placeholder="Spouse Plan Code">
       </div>
 
       <div class="col-3">
-        <span class="label label-default">Plan code manual Entry</span>
-        <input type="text" class="form-control mb-2 " formControlName="FCVolCIPlanCodeManualEntry" style="width: 100%;"
-          placeholder="Plan code manual Entry">
+        <span class="label label-default">Child Plan code</span>
+        <input type="text" class="form-control mb-2 " formControlName="FCVolCIChildPlanCode" style="width: 100%;"
+          placeholder="Child Plan code">
       </div>
 
 
